--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
+html
+    font-family: 'Open Sans'
+
+.msg-success
+    background-color: #45a504
+    color: white
+
+    & button
+        color: white
+
+.msg-error
+    background-color: #c00000
+    color: white
+
+    & button
+        color: white
